# yp_project_work_4

./: Cargo.toml  README.md
.github/workflows/: rust.yml
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
image_processor/: Cargo.toml
image_processor/src/: error.rs  lib.rs  main.rs  plugin_loader.rs
image_processor/tests/: integration.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
