[workspace]
members = ["image_processor", "mirror_plugin", "blur_plugin"]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
module_inception = "allow"
