[package]
name = "image_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
libloading = "0.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

[dev-dependencies]
rstest = "0.26"
tempfile = "3.25"
assert_cmd = "2.1"

[lints]
workspace = true
